update java options