@@ -1,4 +1,5 @@
 FROM openjdk:11
+ENV JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -Xmx1g -Xlog:gc
 ADD ./build/libs/web-parser-rest.jar /app.jar
 HEALTHCHECK --interval=30s --timeout=300s --retries=3 CMD curl -sS http://localhost:8091 || exit 1
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar","-Xmx1g -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:+PrintHeapAtGC"]
+ENTRYPOINT exec java $JAVA_OPTS -jar /app.jar
